# flx4py

./: .gitignore  LICENSE  README.md  led.py  mkdocs.yml  pyproject.toml  test.py  test2.py
docs/: index.md  mappings.md
docs/api/: controller.md  events.md  leds.md
docs/guide/: animations.md  callbacks.md  installation.md  leds.md  quickstart.md
examples/: volume_control.py
flx4py/: __init__.py  controller.py  events.py  leds.py  mappings.py  midi_devices.py
