[project]
name = "flx4py"
version = "0.0.0b0"
description = "Python MIDI interface for the Pioneer DDJ-FLX4, providing high-level access to buttons, knobs, and LEDs."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"

authors = [
  { name = "Arne K. (TRC-Loop)", email = "me@arne.sh" }
]

keywords = [
  "midi",
  "dj",
  "controller",
  "pioneer",
  "ddj-flx4"
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: MIDI"
]

dependencies = ["mido (>=1.3.3,<2.0.0)", "python-rtmidi (>=1.5.8,<2.0.0)"]

[project.urls]
Homepage = "https://github.com/TRC-Loop/flx4py"
Repository = "https://github.com/TRC-Loop/flx4py"
Issues = "https://github.com/TRC-Loop/flx4py/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
