[project]
name = "flx4py"
version = "0.1.0"
description = "Python library for the Pioneer DDJ-FLX4 DJ controller."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"

authors = [
  { name = "Arne K. (TRC-Loop)", email = "me@arne.sh" }
]

keywords = [
  "midi",
  "dj",
  "controller",
  "pioneer",
  "ddj-flx4",
  "ddj",
  "flx4"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "mido>=1.3.3,<2.0.0",
  "python-rtmidi>=1.5.8,<2.0.0"
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0"
]
dev = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/TRC-Loop/flx4py"
Repository = "https://github.com/TRC-Loop/flx4py"
Issues = "https://github.com/TRC-Loop/flx4py/issues"
Documentation = "https://TRC-Loop.github.io/flx4py/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flx4py"
version = "0.1.0"
description = "Python library for the Pioneer DDJ-FLX4 DJ controller."
authors = ["Arne K. (TRC-Loop) <me@arne.sh>"]
readme = "README.md"
packages = [{ include = "flx4py" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mido = ">=1.3.3,<2.0.0"
python-rtmidi = ">=1.5.8,<2.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.5.0"
mkdocstrings = { version = ">=0.24.0", extras = ["python"] }
